<resources>
    <string name="app_name">Trooute</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="onboarding_title_1">Welcome to Trooute!</string>
    <string name="onboarding_desc_1">Join travelers, share experiences. Your journey, their company.</string>
    <string name="onboarding_title_2">Find Travel Partners</string>
    <string name="onboarding_desc_2">Match with travelers, journey together. Connect, travel, bond.</string>
    <string name="onboarding_title_3">Hassle-Free Bookings</string>
    <string name="onboarding_desc_3">Book rides seamlessly, travel hassle-free. Your seat, a tap away.</string>
    <string name="onboarding_title_4">Connect and Go</string>
    <string name="onboarding_desc_4">Chat, plan, explore as companions. New friendships, shared roads.</string>
    <string name="person">/Person</string>
    <string name="trips_around_you">Trips around you</string>
    <string name="ongoing_trips">Ongoing Trips</string>
    <string name="destination_and_schedule">Destination and Schedule</string>
    <string name="trip_details">Trip Details</string>
    <string name="book_now">Book now</string>
    <string name="end_trip">End Trip</string>
    <string name="from">From</string>
    <string name="enter_starting_location">Enter starting location</string>
    <string name="where_to">Where to</string>
    <string name="enter_destination_location">Enter destination location</string>
    <string name="seek_out_trips">Seek Out Trips</string>
    <string name="enter_pickup_location">Enter pickup location</string>
    <string name="please_be_on_time_as_we_have_a_tight_schedule">Please be on time as we have a tight schedule.</string>
    <string name="verify">Verify</string>
    <string name="your_code_here">Your code here</string>
    <string name="resend">Resend</string>
    <string name="confirm">Confirm</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="we_will_send_a_code_to_your_phone_to_reset_your_password">We will send a code to your phone to reset your password.</string>
    <string name="please_enter_the_verification_code_sent_to_your_email_address">Please enter the verification code sent to your email address</string>
    <string name="email_address">Email address</string>
    <string name="your_email_address_here">Your email address here</string>
    <string name="send_link">Send link</string>
    <string name="sing_in">Sing in</string>
    <string name="password">Password</string>
    <string name="your_password_here">Your password here</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="full_name">Full name</string>
    <string name="e_g_john_smith">E.g. John Smith</string>
    <string name="phone_number">Phone number</string>
    <string name="your_phone_number_here">Your phone number here</string>
    <string name="retype_your_password">Retype your password</string>
    <string name="retype_your_password_here">Retype your password here</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="other_relevant_details_about_the_trip">Other relevant details about the trip</string>
    <string name="passengers">Passengers</string>
    <string name="persons">Persons</string>
    <string name="proceed">Proceed</string>
    <string name="booking_detail">Booking Detail</string>
    <string name="trip_booking_request_sent">Trip Booking request sent!</string>
    <string name="trip_booking_request_sent_desc">
        Thank you for choosing our ride-sharing platform! Your booking request for the upcoming trip has been successfully sent.
        We’ll notify you as soon as your booking is confirmed.
    </string>
    <string name="back_to_home">Back to Home</string>
    <string name="message">Message</string>
    <string name="upload_vehicle_photo">Upload vehicle photo</string>
    <string name="click_to_upload_photo">Click to upload photo</string>
    <string name="make">Make</string>
    <string name="honda">Honda</string>
    <string name="model">Model</string>
    <string name="civic_1_8">Civic 1.8</string>
    <string name="year">Year</string>
    <string name="select">Select</string>
    <string name="color">Color</string>
    <string name="vehicle_license_plate">Vehicle license plate</string>
    <string name="afk_235">AFK -235</string>
    <string name="upload_driving_license">Upload driving license</string>
    <string name="driving_licience_desc">Hold your driver’s license in hand and flash your best smile for the camera. Your journey towards becoming a driver starts with this snapshot.</string>
    <string name="submit_request">Submit Request</string>
    <string name="thanks_for_registration">Thanks for Registration</string>
    <string name="success_desc">Your submission has been received. We will be in touch and contact you ASAP</string>
    <string name="reviews">Reviews</string>
    <string name="cancel_booking">Cancel booking</string>
    <string name="waiting">Waiting</string>
    <string name="waiting_for_approval">Waiting for approval</string>
    <string name="approved">Approved</string>
    <string name="waiting_for_payment">Waiting for payment</string>
    <string name="waiting_status_desc">We’ll notify you as soon as your booking is confirmed.</string>
    <string name="approved_status_desc">Your booking is approved! Please proceed with payment to confirm.</string>
    <string name="make_payment">Make Payment</string>
    <string name="confirmed">Confirmed</string>
    <string name="confirm_status_desc">Your booking is now confirmed! Anticipate the upcoming trip day.</string>
    <string name="completed">Completed</string>
    <string name="completed_status_desc">Trip successfully completed. Thank you for riding with us!</string>
    <string name="trip_canceled_desc">Trip Canceled. We\'re Sorry for the Inconvenience.</string>
    <string name="driver_details">Driver Details</string>
    <string name="choose_the_date_of_the_trip">Choose the date of the trip</string>
    <string name="specify_the_departure_time">Specify the departure time</string>
    <string name="time">Time</string>
    <string name="seats_available_for_passengers">Seats available for passengers</string>
    <string name="set_a_price_for_the_trip">Set a price for the trip </string>
    <string name="per_person">(Per person)</string>
    <string name="experience_with_driver">Experience with driver</string>
    <string name="rate_the_vehicle">Rate the vehicle</string>
    <string name="share_your_thoughts">Share your thoughts</string>
    <string name="share_your_thoughts_desc">Did you enjoy the ride? How was the overall experience?</string>
    <string name="my_review">My Review</string>
    <string name="driver_review">Driver\'s Review</string>
    <string name="submit">Submit</string>
    <string name="success">Success</string>
    <string name="warning">Warning</string>
    <string name="error">Error</string>
    <string name="experience">Experience</string>
    <string name="network_message">Please connect your mobile with internet</string>
    <string name="verification_email_sent">Verification Email sent.</string>
    <string name="session_expired_1">You are not logged in! Please log in to get access.</string>
    <string name="session_expired_2">Invalid token. Please log in again!</string>
    <string name="session_expired_3">Your token has expired! Please log in again.</string>
    <string name="passengers_not_available">Passengers not available</string>
    <string name="platform_fee">Platform fee</string>
    <string name="_1_x_children">1 x Children</string>
    <string name="n_x_seats">N x Seats</string>
    <string name="my_details">My Details</string>
    <string name="post_trip">Post Trip</string>
    <string name="review">Review</string>
    <string name="restrictions_on_luggage_type_and_weight">Restrictions on luggage type and weight</string>
    <string name="type">Type</string>
    <string name="weight">weight</string>
    <string name="round_trip">Round Trip</string>
    <string name="smoking_allowed">Smoking Allowed</string>
    <string name="language_preference">Language Preference</string>
    <string name="other_relevant_details">Other relevant details</string>
    <string name="no_trips_around_you">No trips available around you</string>
    <string name="no_trips_history_available">No trips history available</string>
    <string name="home">Home</string>
    <string name="inbox">Inbox</string>
    <string name="bookings">Bookings</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="booking_not_available">Booking not available yet</string>
    <string name="passengers_details">Passengers Details</string>
    <string name="accept">Accept</string>
    <string name="no_inbox_data_available">Messages are not available</string>
    <string name="notifications_are_not_available">Notifications are not available</string>
    <string name="total"> Total</string>
    <string name="not_provided">Not provided</string>
    <string name="canceled">Canceled</string>
    <string name="cancelled">Cancelled</string>
    <string name="clear">Clear</string>
    <string name="become_a_driver">Become a Driver</string>
    <string name="driver_mode">Driver Mode</string>
    <string name="your_profile">Profile</string>
    <string name="wishlist">Bookmark</string>
    <string name="create_a_new_trip">Create a new trip</string>
    <string name="trip_history">Trip History</string>
    <string name="payment_and_withdraw">Payment and withdraw</string>
    <string name="invite_a_friend">Invite a friend</string>
    <string name="support">Support</string>
    <string name="frequently_asked_questions">Frequently asked questions</string>
    <string name="visit_the_help_center">Visit the help center</string>
    <string name="give_us_feedback">Give us feedback</string>
    <string name="report_a_problem">Report a problem</string>
    <string name="legal">Legal</string>
    <string name="terms_of_services">Terms &amp; Conditions</string>
    <string name="acceptance_of_terms_title">1. Acceptance of Terms</string>
    <string name="acceptance_of_terms_desc">By accessing or using the Trooute mobile application ("the App"), you agree to be bound by these Terms and Conditions and all applicable laws and regulations. If you do not agree with any of these terms, you are prohibited from using or accessing the App.</string>
    <string name="user_responsibilities_title">2. User Responsibilities</string>
    <string name="user_responsibilities_desc">2.1. Liability for Accidents/Damage: Users, both drivers, and passengers, acknowledge and agree that they are solely responsible for any accidents, injuries, or damages that may occur during or as a result of using the App. Trooute assumes no liability for any such incidents.</string>
    <string name="user_responsibilities_desc_2">2.2. Cancellation Policy: No costs will be refunded for cancellations. Users are responsible for understanding and adhering to the cancellation policy outlined in the App.</string>
    <string name="contact_information_title">3. Contact Information</string>
    <string name="contact_information_desc">For any inquiries or communication related to the App, users may contact us at support@trooute.com.</string>
    <string name="modifications_title">4. Modifications</string>
    <string name="modifications_desc">Trooute reserves the right to modify these terms at any time without prior notice. By continuing to use the App after modifications, users accept the updated terms.</string>
    <string name="enable_biometric_login">Enable Biometric Login</string>
</resources>