<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:id="@+id/ltRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/default_space"
            android:paddingVertical="@dimen/default_screen_vertical_space"
            app:divider="@drawable/divider_default_space"
            app:showDividers="middle"
            tools:context=".presentation.ui.auth.SignInActivity"
            tools:ignore="ScrollViewSize">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/HeadLine_1"
                android:layout_marginVertical="@dimen/auth_screen_top_space"
                android:text="@string/sign_in"
                android:textAlignment="center" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:divider="@drawable/divider_section_space"
                app:showDividers="middle">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/HeadLine_7"
                    android:text="@string/email_address" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tlEmailAddress"
                    style="@style/TextInputLayoutStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/teEmailAddress"
                        style="@style/TextInputEditTextStyle"
                        android:hint="@string/your_email_address_here"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:divider="@drawable/divider_section_space"
                app:showDividers="middle">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/HeadLine_7"
                    android:text="@string/password" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tlPassword"
                    style="@style/TextInputLayoutStyle"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tePassword"
                        style="@style/TextInputEditTextStyle"
                        android:hint="@string/your_password_here"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <CheckBox
                android:id="@+id/biometricCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable_biometric_login"
                app:buttonTint="@color/on_primary_green_color" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvForgotPassword"
                style="@style/HeadLine_7"
                android:layout_width="wrap_content"
                android:layout_gravity="end"
                android:textAlignment="textEnd"
                android:text="@string/forgot_password" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:divider="@drawable/divider_sub_section_space"
            app:showDividers="middle">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/btnSignIn"
                style="@style/PrimaryRoundedButton"
                android:text="@string/sign_in" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:src="@drawable/fingerprint"
                android:id="@+id/biometricLoginButton"
                android:tint="@color/on_primary_green_color" />


        </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:divider="@drawable/divider_sub_section_space"
                app:showDividers="middle">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/Body_7"
                    android:layout_width="wrap_content"
                    android:text="@string/don_t_have_an_account" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvSingUp"
                    style="@style/HeadLine_7"
                    android:layout_width="wrap_content"
                    android:text="@string/sign_up"
                    android:textColor="@color/on_primary_green_color" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</layout>