<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:id="@+id/ltRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/default_space"
            android:paddingVertical="@dimen/default_screen_vertical_space"
            app:divider="@drawable/divider_default_space"
            app:showDividers="middle"
            tools:context=".presentation.ui.auth.SignUpActivity"
            tools:ignore="ScrollViewSize">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/HeadLine_1"
                android:layout_marginVertical="@dimen/auth_screen_top_space"
                android:text="@string/sign_up"
                android:textAlignment="center" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                app:divider="@drawable/divider_default_space"
                app:showDividers="middle">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imgUserProfile"
                    style="@style/CircleProfileImageStyle"
                    android:layout_width="@dimen/_75sdp"
                    android:layout_height="@dimen/_75sdp"
                    app:contentPadding="@dimen/content_padding"
                    app:srcCompat="@drawable/ic_camera"
                    app:strokeColor="@color/on_primary_mirage_color"
                    app:strokeWidth="@dimen/stroke_width_size" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:divider="@drawable/divider_section_space"
                    app:showDividers="middle">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/HeadLine_7"
                        android:text="@string/full_name" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tlFullName"
                        style="@style/TextInputLayoutStyle">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/teFullName"
                            style="@style/TextInputEditTextStyle"
                            android:hint="@string/e_g_john_smith"
                            android:inputType="textPersonName|textCapWords" />
                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:divider="@drawable/divider_section_space"
                    app:showDividers="middle">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/HeadLine_7"
                        android:text="@string/email_address" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tlEmailAddress"
                        style="@style/TextInputLayoutStyle">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/teEmailAddress"
                            style="@style/TextInputEditTextStyle"
                            android:hint="@string/your_email_address_here"
                            android:inputType="textEmailAddress" />
                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:divider="@drawable/divider_section_space"
                    app:showDividers="middle">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/HeadLine_7"
                        android:text="@string/phone_number" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tlPhoneNumber"
                        style="@style/TextInputLayoutStyle">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tePhoneNumber"
                            style="@style/TextInputEditTextStyle"
                            android:hint="@string/your_phone_number_here"
                            android:inputType="phone" />
                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:divider="@drawable/divider_section_space"
                    app:showDividers="middle">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/HeadLine_7"
                        android:text="@string/password" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tlPassword"
                        style="@style/TextInputLayoutStyle"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tePassword"
                            style="@style/TextInputEditTextStyle"
                            android:hint="@string/your_password_here"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:divider="@drawable/divider_section_space"
                    app:showDividers="middle">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/HeadLine_7"
                        android:text="@string/retype_your_password" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tlRetypePassword"
                        style="@style/TextInputLayoutStyle"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/teRetypePassword"
                            style="@style/TextInputEditTextStyle"
                            android:hint="@string/retype_your_password_here"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSignup"
                    style="@style/PrimaryRoundedButton"
                    android:text="@string/sign_up" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:divider="@drawable/divider_sub_section_space"
                    app:showDividers="middle">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/Body_7"
                        android:layout_width="wrap_content"
                        android:text="@string/already_have_an_account" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvSingin"
                        style="@style/HeadLine_7"
                        android:layout_width="wrap_content"
                        android:text="@string/sign_in"
                        android:textColor="@color/on_primary_green_color" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</layout>